js/js.translator/testData/incremental/invalidation/inlineFunctionAsFunctionReference/lib1/l1.0.kt
inline fun bar() = "0"

